# Scarlet-LLM

./: .README.md.kate-swp  .gitignore  README.md  package-lock.json  package.json  vite.config.js
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: agent_presets.rs  attachments.rs  chats.rs  import_export.rs  llm.rs  mod.rs  presets.rs  proxies.rs  settings.rs
src-tauri/src/providers/: anthropic.rs  google.rs  mod.rs  openai.rs  openrouter.rs  responses.rs  text.rs
src-tauri/src/storage/: json_store.rs  mod.rs
src/lib/: i18n.ts
src/lib/api/: invoke.ts
src/lib/components/chat/: ChatView.svelte  InputArea.svelte  MessageBubble.svelte  SummaryBoundary.svelte
src/lib/components/common/: Markdown.svelte
src/lib/components/settings/: AppearanceTab.css  AppearanceTab.svelte  GeneralTab.svelte  ParametersTab.svelte  PromptsTab.svelte  ReasoningTab.svelte  Row.svelte  Section.svelte  Segmented.svelte  SettingsDrawer.svelte  Toggle.svelte  ToolsTab.svelte
src/lib/components/sidebar/: Sidebar.svelte
src/lib/components/topbar/: ModelSelector.svelte  ProxyIndicator.svelte  ProxyPanel.svelte  TopBar.svelte
src/lib/stores/: agentPresets.ts  chats.ts  models.ts  presets.ts  proxies.ts  settings.ts  ui.ts
src/lib/types/: chat.ts  preset.ts  proxy.ts  settings.ts
src/lib/utils/: agents.ts  background.ts  buildRequest.ts  clickOutside.ts  id.ts  markdown.ts  tools.ts
src/routes/: +page.svelte
