[package]
name = "scarlet-llm"
version = "1.0.6"
description = "Scarlet LLM - local LLM frontend"
authors = ["veliarelle"]
edition = "2021"

[lib]
name = "scarlet_llm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
eventsource-stream = "0.2"
base64 = "0.22"
flate2 = "1"
tauri-plugin-dialog = "2"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
webkit2gtk = { version = "2", features = ["v2_40"] }
